--- a/Hardware und PC-Komponenten/Aufbau.html
+++ b/Hardware und PC-Komponenten/Aufbau.html
@@ -1,33 +1,35 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <title>Aufbau - PC Hardware</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Aufbau</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <header class="main-header">
-    <h1>Aufbau</h1>
-  </header>
 
-  <nav>
-    <ul>
-      <li><a href="index.html">Start</a></li>
-      <li><a href="Komponenten.html">Komponenten</a></li>
-      <li><a href="Aufbau.html">Aufbau</a></li>
-    </ul>
-  </nav>
+<body class="bg-light">
 
-  <main>
-    <section>
-      <h2>Hier kommt der Aufbau der Hardware</h2>
-      <p>Platzhaltertext – die Seite funktioniert!</p>
-    </section>
-  </main>
+<nav class="py-3 border-bottom bg-dark">
+    <div class="container d-flex flex-wrap align-items-center justify-content-between">
+        <a href="#" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+        </a>
 
-  <footer>
-    <p>© 2025 – PC Hardware Projekt</p>
-  </footer>
+        <ul class="nav">
+            <li class="nav-item">
+                <a href="index.html" class="nav-link text-white">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="komponenten.html" class="nav-link text-white">Komponenten</a>
+            </li>
+            <li class="nav-item">
+                <a href="aufbau.html" class="nav-link text-white active">Aufbau</a>
+            </li>
+        </ul>
+
+    </div>
+</nav>
+
 </body>
 </html>
 
