--- a/Hardware und PC-Komponenten/index.html
+++ b/Hardware und PC-Komponenten/index.html
@@ -44,22 +44,35 @@
     <div class="row g-4 align-items-stretch">
 
         <div class="col-md-6">
-            <div class="p-4 bg-light rounded shadow-sm h-100">
+            <div class="p-5 bg-light rounded shadow-lg h-100">
                 <h2>Was ist ein Computer überhaupt?</h2>
                 <p>
-                    Ein Computer besteht aus mehreren Bauteilen, die zusammenarbeiten, um Programme auszuführen,
-                    Spiele darzustellen oder Daten zu verarbeiten.
+                    Ein Computer ist ein elektronisches Gerät, das Daten verarbeitet und Programme ausführt. 
+                    Er besteht aus mehreren Bauteilen, die zusammenarbeiten, um Aufgaben wie Berechnungen, 
+                    Spiele oder die Darstellung von Informationen zu ermöglichen.
+
                 </p>
             </div>
         </div>
 
         <div class="col-md-6">
-            <div class="p-4 bg-light rounded shadow-sm h-100">
+            <div class="p-5 bg-light rounded shadow-lg h-100">
                 <h2>Was ist Computer-Hardware?</h2>
                 <p>
                     Computerhardware bezeichnet alle physischen Teile eines Computersystems. Desktop- und Laptop-PCs
                     nutzen ähnliche Komponenten, unterscheiden sich aber in Größe und Bauform.
                 </p>
+            </div>
+        </div>
+
+        <div class="col-md-12">
+            <div class="p-5 bg-light rounded shadow-lg h-100">
+                <h2>Welche Computer-Hardware gibt es?</h2>
+                <p>
+                    Computer-Hardware umfasst alle physischen Bauteile eines Computers. Dazu gehören das Mainboard,
+                    die CPU, die Grafikkarte, der Arbeitsspeicher (RAM), Festplatten oder SSDs, das Netzteil sowie
+                    Kühlungselemente wie Lüfter. Diese Komponenten bilden die Grundlage eines funktionsfähigen
+                    Computersystems und arbeiten zusammen, um Programme auszuführen und Daten zu verarbeiten.
             </div>
         </div>
 
