searched for the image from RAM and inserted and adjusted it into the file

--- a/Hardware und PC-Komponenten/Komponenten.html
+++ b/Hardware und PC-Komponenten/Komponenten.html
@@ -30,5 +30,36 @@
     </div>
 </nav>
 
+<div class="container mt-4">
+    <div class="row g-4">
+
+        <div class="col-md-12">
+            <div class="component-box">
+                <img src="img.jpg" class="component-img" alt="CPU">
+                <h3>CPU</h3>
+                <p>
+                    Die CPU ist die Zentraleinheit Ihres Computers. Sie übernimmt die Steuerung der Datenverarbeitung,
+                    ähnlich wie das Gehirn den Körper lenkt. Die Verarbeitungsgeschwindigkeit wird als „Taktfrequenz“
+                    bezeichnet und in Gigahertz (GHz) gemessen. Eine CPU mit einem hohen GHz-Wert wird wahrscheinlich
+                    schneller arbeiten als andere Versionen der gleichen Marke und Generation.
+                </p>
+            </div>
+        </div>
+
+        <div class="col-md-12">
+            <div class="component-box">
+                <img src="crucial-ddr3-4gb-dimm-image.avif" class="component-img" alt="RAM">
+                <h3>RAM</h3>
+                <p>
+                    Ein Computer-RAM arbeitet eng mit der CPU zusammen und speichert vorübergehend von Programmen erstellte Informationen, um sie sofort zugänglich zu machen. Es wird manchmal auch als „flüchtiger“ Speicher bezeichnet, da die vorhandenen Daten jedes Mal gelöscht werden, wenn Ihr Computer neu gestartet wird.
+                    Das RAM spielt bei vielen Aufgaben eine entscheidende Rolle: bei der Bildwiedergabe im Grafikdesign, bei der Bearbeitung von Videos oder Fotos sowie beim Multitaskings mit mehreren geöffneten Apps oder Programmen.  
+                </p>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
 </body>
 </html>
