--- a/Hardware und PC-Komponenten/index.html
+++ b/Hardware und PC-Komponenten/index.html
@@ -44,7 +44,7 @@
     <div class="row g-4 align-items-stretch">
 
         <div class="col-md-6">
-            <div class="p-5 bg-light rounded shadow-lg h-100">
+            <div class="p-5 bg-light rounded shadow-lg h-100 fade-in delay-1">
                 <h2>Was ist ein Computer überhaupt?</h2>
                 <p>
                     Ein Computer ist ein elektronisches Gerät, das Daten verarbeitet und Programme ausführt. 
@@ -56,7 +56,7 @@
         </div>
 
         <div class="col-md-6">
-            <div class="p-5 bg-light rounded shadow-lg h-100">
+            <div class="p-5 bg-light rounded shadow-lg h-100 fade-in delay-1">
                 <h2>Was ist Computer-Hardware?</h2>
                 <p>
                     Computerhardware bezeichnet alle physischen Teile eines Computersystems. Desktop- und Laptop-PCs
@@ -66,10 +66,10 @@
         </div>
 
         <div class="col-md-12">
-            <div class="p-5 bg-light rounded shadow-lg h-100">
+            <div class="p-5 bg-light rounded shadow-lg h-100 fade-in delay-1">
                 <h2>Welche Computer-Hardware gibt es?</h2>
                 <p>
-                    Computer-Hardware umfasst alle physischen Bauteile eines Computers. Dazu gehören das Mainboard,
+                    Computer-Hardware umfasst alle physischen Bauteile eines Computers. Dazu gehören das Motherboard,
                     die CPU, die Grafikkarte, der Arbeitsspeicher (RAM), Festplatten oder SSDs, das Netzteil sowie
                     Kühlungselemente wie Lüfter. Diese Komponenten bilden die Grundlage eines funktionsfähigen
                     Computersystems und arbeiten zusammen, um Programme auszuführen und Daten zu verarbeiten.
