The first piece of information about the housing was inserted into aufbau.cs.

--- a/Hardware und PC-Komponenten/Aufbau.html
+++ b/Hardware und PC-Komponenten/Aufbau.html
@@ -29,6 +29,12 @@
 
     </div>
 </nav>
+<div class="p-5 bg-light rounded shadow-lg fade-in">
+    <h2>1. Gehäuse</h2>
+    <p>
+        Jeder PC besteht - für jeden sichtbar - aus einem Gehäuse, in dem sich alle bedeutenden Bestandteile befinden. Auch wenn bei der optischen Gestaltung der Kreativität der verschiedenen Hersteller kaum Grenzen gesetzt sind, besteht das Innere eines Gehäuses immer aus denselben Elementen. Die wichtigsten Funktionen hierbei sind die Aufhängung für das Mainboard und das Netzteil sowie die verbauten Komponenten mit ausreichend Belüftung zu versorgen.
+    </p>
+</div>
 
 </body>
 </html>
