--- a/Hardware und PC-Komponenten/Aufbau.html
+++ b/Hardware und PC-Komponenten/Aufbau.html
@@ -19,9 +19,24 @@
             <li class="nav-item">
                 <a href="index.html" class="nav-link text-white">Home</a>
             </li>
-            <li class="nav-item">
-                <a href="komponenten.html" class="nav-link text-white">Komponenten</a>
-            </li>
+<li class="nav-item dropdown">
+    <a class="nav-link text-white dropdown-toggle" href="#" id="komponentenDropdown" data-bs-toggle="dropdown">
+        Komponenten
+    </a>
+    <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="cpu.html">CPU</a></li>
+        <li><a class="dropdown-item" href="gpu.html">Grafikkarte</a></li>
+        <li><a class="dropdown-item" href="ram.html">RAM</a></li>
+        <li><a class="dropdown-item" href="mainboard.html">Mainboard</a></li>
+        <li><a class="dropdown-item" href="ssd.html">SSD / HDD</a></li>
+        <li><a class="dropdown-item" href="psu.html">Netzteil</a></li>
+        <li><a class="dropdown-item" href="cooler.html">Kühler</a></li>
+        <li><a class="dropdown-item" href="case.html">Gehäuse</a></li>
+    </ul>
+</li>
+
+
+
             <li class="nav-item">
                 <a href="aufbau.html" class="nav-link text-white active">Aufbau</a>
             </li>
@@ -35,7 +50,7 @@
         Jeder PC besteht - für jeden sichtbar - aus einem Gehäuse, in dem sich alle bedeutenden Bestandteile befinden. Auch wenn bei der optischen Gestaltung der Kreativität der verschiedenen Hersteller kaum Grenzen gesetzt sind, besteht das Innere eines Gehäuses immer aus denselben Elementen. Die wichtigsten Funktionen hierbei sind die Aufhängung für das Mainboard und das Netzteil sowie die verbauten Komponenten mit ausreichend Belüftung zu versorgen.
     </p>
 </div>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
