--- a/Hardware und PC-Komponenten/Komponenten.html
+++ b/Hardware und PC-Komponenten/Komponenten.html
@@ -19,9 +19,24 @@
             <li class="nav-item">
                 <a href="index.html" class="nav-link text-white">Home</a>
             </li>
-            <li class="nav-item">
-                <a href="komponenten.html" class="nav-link text-white active">Komponenten</a>
-            </li>
+<li class="nav-item dropdown">
+    <a class="nav-link text-white dropdown-toggle" href="#" id="komponentenDropdown" data-bs-toggle="dropdown">
+        Komponenten
+    </a>
+    <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="cpu.html">CPU</a></li>
+        <li><a class="dropdown-item" href="gpu.html">Grafikkarte</a></li>
+        <li><a class="dropdown-item" href="ram.html">RAM</a></li>
+        <li><a class="dropdown-item" href="mainboard.html">Mainboard</a></li>
+        <li><a class="dropdown-item" href="ssd.html">SSD / HDD</a></li>
+        <li><a class="dropdown-item" href="psu.html">Netzteil</a></li>
+        <li><a class="dropdown-item" href="cooler.html">Kühler</a></li>
+        <li><a class="dropdown-item" href="case.html">Gehäuse</a></li>
+    </ul>
+</li>
+
+
+
             <li class="nav-item">
                 <a href="aufbau.html" class="nav-link text-white">Aufbau</a>
             </li>
@@ -63,6 +78,7 @@
                 <h3>Motherboard</h3>
                 <p>
                     Das Motherboard ist das zentrale Element, das einen PC zum Laufen bringt und quasi alle Hardware-Komponenten miteinander verbindet. Das Mainboard fungiert als Gehirn, verteilt die Leistung dort, wo sie gebraucht wird, kommuniziert und koordiniert mit allen anderen Komponenten und ist damit eine der bedeutendsten Hardware-Komponenten eines Computers.
+                </p>
             </div>
         </div>
 
@@ -72,6 +88,7 @@
                 <h3>GPU</h3>
                 <p>
                     Die GPU tut genau das, was ihr Name sagt, sie verarbeitet Unmengen grafischer Daten. Eine dedizierte Grafikkarte lässt sich über einen Erweiterungssteckplatz mit dem Motherboard verbinden. Sie können Ihre Grafikkarte aufrüsten, wenn Sie die Gaming-, Video- oder visuelle Leistung Ihres PCs verbessern möchten.
+                </p>
             </div>
         </div>
 
@@ -81,18 +98,21 @@
                 <h3>PSU</h3>
                 <p>
                     Ein Netzteil leitet den Strom aus einer externen Stromquelle oder Laptop-Batterie zum Motherboard, um die einzelnen Hardwarekomponenten mit Elektrizität zu versorgen. Netzteile müssen daher unbedingt eine ausreichende Wattleistung haben.
+                </p>
             </div>
         </div>
-        </div>
+
         <div class="col-md-12">
             <div class="component-box">
                 <img src="img.png" class="component-img" alt="SSD und HDD">
                 <h3>SSD und HDD</h3>
                 <p>
                     SSDs und HDDs sind zwei Arten von Speicherlaufwerken, mit deren Hilfe sich auf Ihrem Computer installierte Programme, Anwendungen oder Dateien speichern lassen, selbst wenn dieser ausgeschaltet ist. HDDs nutzen eine ältere Technologie, bei der Binärdaten auf rotierende Magnetscheiben, sogenannte Platten, geschrieben werden, die sich mit hoher Geschwindigkeit drehen. SSDs sind eine neuere Art von Laufwerken, die Daten auf statischen NAND-Flash-Speicher-Chips speichern. Im direkten Vergleich zwischen SSD und Festplatte liegen SSDs klar vorne, hauptsächlich dank ihrer Geschwindigkeit, ihrer Haltbarkeit und ihres Stromverbrauchs.
+                </p>
+            </div>
         </div>
 </div>
 
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
