--- a/Hardware und PC-Komponenten/index.html
+++ b/Hardware und PC-Komponenten/index.html
@@ -22,9 +22,24 @@
             <li class="nav-item">
                 <a href="index.html" class="nav-link text-white active">Home</a>
             </li>
-            <li class="nav-item">
-                <a href="komponenten.html" class="nav-link text-white">Komponenten</a>
-            </li>
+<li class="nav-item dropdown">
+    <a class="nav-link text-white dropdown-toggle" href="#" id="komponentenDropdown" data-bs-toggle="dropdown">
+        Komponenten
+    </a>
+    <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="cpu.html">CPU</a></li>
+        <li><a class="dropdown-item" href="gpu.html">Grafikkarte</a></li>
+        <li><a class="dropdown-item" href="ram.html">RAM</a></li>
+        <li><a class="dropdown-item" href="mainboard.html">Mainboard</a></li>
+        <li><a class="dropdown-item" href="ssd.html">SSD / HDD</a></li>
+        <li><a class="dropdown-item" href="psu.html">Netzteil</a></li>
+        <li><a class="dropdown-item" href="cooler.html">Kühler</a></li>
+        <li><a class="dropdown-item" href="case.html">Gehäuse</a></li>
+    </ul>
+</li>
+
+
+
             <li class="nav-item">
                 <a href="aufbau.html" class="nav-link text-white">Aufbau</a>
             </li>
@@ -79,7 +94,7 @@
     </div>
 </div>
 
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
