Dropdown implemented on all pages

--- a/Hardware und PC-Komponenten/index.html
+++ b/Hardware und PC-Komponenten/index.html
@@ -23,7 +23,7 @@
                 <a href="index.html" class="nav-link text-white active">Home</a>
             </li>
 <li class="nav-item dropdown">
-    <a class="nav-link text-white dropdown-toggle" href="#" id="komponentenDropdown" data-bs-toggle="dropdown">
+    <a class="nav-link text-white dropdown-toggle" href="#" id="komponentenDropdown">
         Komponenten
     </a>
     <ul class="dropdown-menu">
