--- a/Hardware und PC-Komponenten/Aufbau.html
+++ b/Hardware und PC-Komponenten/Aufbau.html
@@ -1,56 +1,84 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Aufbau</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body class="bg-light">
-
-<nav class="py-3 border-bottom bg-dark">
-    <div class="container d-flex flex-wrap align-items-center justify-content-between">
-        <a href="#" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+  <body class="bg-light">
+    <nav class="py-3 border-bottom bg-dark">
+      <div
+        class="container d-flex flex-wrap align-items-center justify-content-between"
+      >
+        <a
+          href="#"
+          class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none"
+        >
         </a>
 
         <ul class="nav">
-            <li class="nav-item">
-                <a href="index.html" class="nav-link text-white">Home</a>
-            </li>
-<li class="nav-item dropdown">
-    <a class="nav-link text-white dropdown-toggle" href="#" id="komponentenDropdown" data-bs-toggle="dropdown">
-        Komponenten
-    </a>
-    <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="cpu.html">CPU</a></li>
-        <li><a class="dropdown-item" href="gpu.html">Grafikkarte</a></li>
-        <li><a class="dropdown-item" href="ram.html">RAM</a></li>
-        <li><a class="dropdown-item" href="mainboard.html">Mainboard</a></li>
-        <li><a class="dropdown-item" href="ssd.html">SSD / HDD</a></li>
-        <li><a class="dropdown-item" href="psu.html">Netzteil</a></li>
-        <li><a class="dropdown-item" href="cooler.html">Kühler</a></li>
-        <li><a class="dropdown-item" href="case.html">Gehäuse</a></li>
-    </ul>
-</li>
+          <li class="nav-item">
+            <a href="index.html" class="nav-link text-white">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link text-white dropdown-toggle"
+              href="#"
+              id="komponentenDropdown"
+              data-bs-toggle="dropdown"
+            >
+              Komponenten
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="cpu.html">CPU</a></li>
+              <li><a class="dropdown-item" href="gpu.html">Grafikkarte</a></li>
+              <li><a class="dropdown-item" href="ram.html">RAM</a></li>
+              <li>
+                <a class="dropdown-item" href="mainboard.html">Mainboard</a>
+              </li>
+              <li><a class="dropdown-item" href="ssd.html">SSD / HDD</a></li>
+              <li><a class="dropdown-item" href="psu.html">Netzteil</a></li>
+              <li><a class="dropdown-item" href="cooler.html">Kühler</a></li>
+              <li><a class="dropdown-item" href="case.html">Gehäuse</a></li>
+            </ul>
+          </li>
 
-
-
-            <li class="nav-item">
-                <a href="aufbau.html" class="nav-link text-white active">Aufbau</a>
-            </li>
+          <li class="nav-item">
+            <a href="aufbau.html" class="nav-link text-white active">Aufbau</a>
+          </li>
         </ul>
-
+      </div>
+    </nav>
+    <div class="p-5 bg-light rounded shadow-lg fade-in">
+      <h2>Das Motherboard: Die Zentrale Einheit</h2>
+      <p>
+        Das Motherboard ist das Herzstück eines Computers. Es verbindet alle
+        wichtigen Komponenten und sorgt dafür, dass sie miteinander
+        kommunizieren können. <br />
+        Hier sind einige wichtige Punkte über das Motherboard:
+      </p>
+      <h4>Aufbau und Funktion des Motherboards</h4>
+      <ul>
+        <li>
+          Das Motherboard enthält Steckplätze für CPU, RAM und andere
+          Erweiterungskarten.
+        </li>
+        <li>
+          Es hat Anschlüsse für verschiedene Peripheriegeräte wie Tastatur und
+          Maus.
+        </li>
+        <li>
+          Die Busse auf dem Motherboard ermöglichen die Datenübertragung
+          zwischen den Komponenten.
+        </li>
+      </ul>
     </div>
-</nav>
-<div class="p-5 bg-light rounded shadow-lg fade-in">
-    <h2>1. Gehäuse</h2>
-    <p>
-        Jeder PC besteht - für jeden sichtbar - aus einem Gehäuse, in dem sich alle bedeutenden Bestandteile befinden. Auch wenn bei der optischen Gestaltung der Kreativität der verschiedenen Hersteller kaum Grenzen gesetzt sind, besteht das Innere eines Gehäuses immer aus denselben Elementen. Die wichtigsten Funktionen hierbei sind die Aufhängung für das Mainboard und das Netzteil sowie die verbauten Komponenten mit ausreichend Belüftung zu versorgen.
-    </p>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
-
