--- a/Hardware und PC-Komponenten/Aufbau.html
+++ b/Hardware und PC-Komponenten/Aufbau.html
@@ -78,6 +78,46 @@
           zwischen den Komponenten.
         </li>
       </ul>
+
+      <h2>Prozessor (CPU)</h2>
+      <p>
+        Der Prozessor (auch CPU, Central Processing Unit) ist das Gehrin des
+        Computers. <br />
+        Hier werden in einem bestimmten Rhythmus Befehle interpretiert und
+        ausgeführt. Außerdem werden hier Abläufe koordiniert, denn er ist der
+        erste Befehlsempfänger in elektronischen Geräten. Er registriert, welche
+        Aufgabe von den Nutzerinnen und Nutzern angefordert wird und leitet
+        diese an die entsprechende Stelle weiter.
+
+        <br />
+        Der Prozessor lässt sich in das Rechenwerk und das Steuerwerk
+        unterteilen.
+      </p>
+      <h4>Aufgaben</h4>
+      <p>
+        Prozessoren haben bestimmte Aufgaben.<br />
+        Dazu gehören unter anderem:
+      </p>
+
+      <ul>
+        <li>Rechenoperationen ausgeführt werden</li>
+        <li>Teile des Computers gesteuert werden</li>
+      </ul>
+
+      <h4>Rechenwerk</h4>
+      <p>
+        Innerhalb des Rechenwerks führt der Prozessor Rechnungen aus. <br />
+        Dafür werden Daten eingegeben, verarbeitet und am Ende wieder
+        ausgegeben. Damit der Prozessor überhaupt mit Daten arbeiten kann,
+        müssen sie als Binärcode vorliegen. <br />
+        Das heißt also, dass der Prozessor nur 0en und 1en versteht. Somit
+        müssen alle Daten (wie Buchstaben und Zahlen) in binären Code codiert
+        werden.
+        <br />
+        Eine Rechenoperation, die das Rechenwerk ausführt, könnte dann zum
+        Beispiel die Addition von zwei Binärzahlen sein, wie zum Beispiel 1 + 1
+        = 10.
+      </p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
