--- a/Hardware und PC-Komponenten/Aufbau.html
+++ b/Hardware und PC-Komponenten/Aufbau.html
@@ -118,6 +118,33 @@
         Beispiel die Addition von zwei Binärzahlen sein, wie zum Beispiel 1 + 1
         = 10.
       </p>
+
+      <h2>Arbeitsspeicher - RAM</h2>
+      <p>
+        Der Arbeitsspeicher (auch RAM, Random Access Memory) ist ein schnelles
+        temporärer Speicher, in dem das Betriebssystem laufende Prozesse und
+        Anwendungen zwischenlagert. Jedes Programm, das Sie im Laufe Ihrer
+        Arbeit am PC öffnen, legt erst einmal Daten im Arbeitsspeicher ab. Wenn
+        Sie Ihren Rechner herunterfahren oder neustarten, wird er automatisch
+        geleert und der Platz wieder freigegeben.
+      </p>
+
+      <h4>Warum brauchen Computer das?</h4>
+      <p>
+        Im Computer ist RAM extrem schneller Zwischenspeicher. Dort abgelegte
+        Daten können sehr schnell gelesen und verändert werden. Wenn ihr
+        beispielsweise in einem Videoschnittprogramm arbeitet, wird das
+        zugehörige Projekt im RAM-Speicher geladen und ausgeführt, damit ihr
+        euer Video in Echtzeit schnell schneiden und bearbeiten könnt. Erst wenn
+        ihr das Projekt später speichert, wird es vom schnellen RAM auf die viel
+        langsamere Festplatte geschrieben. Allerdings ist RAM ein flüchtiger
+        Speicher. Das heißt, wenn der Strom ausfällt, verliert er im Gegensatz
+        zu einer Festplatte seine Informationen. Wenn ihr beispielsweise euer
+        Video schneidet und der Rechner oder der Strom ausfällt, ist der
+        Fortschritt eures Projektes verloren. Es sei denn, euer Schnittprogramm
+        hat zwischendurch automatisch eine Sicherung auf der Festplatte
+        erstellt.
+      </p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
